@@ -218,9 +218,9 @@ fun xml_of_mixfix NoSyn = wrap_empty "nosyn"
   | xml_of_mixfix Structure = wrap_empty "structure"
   | xml_of_mixfix (Mixfix args) = wrap "mixfix" (xml_of_triple xml_of_string (xml_of_list xml_of_int) xml_of_int) args
   | xml_of_mixfix (Delimfix s) = wrap "delimfix" xml_of_string s
-  | xml_of_mixfix (InfixName args) = wrap "infixname" (xml_of_pair xml_of_string xml_of_int) args
-  | xml_of_mixfix (InfixlName args) = wrap "infixlname" (xml_of_pair xml_of_string xml_of_int) args
-  | xml_of_mixfix (InfixrName args) = wrap "infixrname" (xml_of_pair xml_of_string xml_of_int) args
+  | xml_of_mixfix (Infix args) = wrap "infix" (xml_of_pair xml_of_string xml_of_int) args
+  | xml_of_mixfix (Infixl args) = wrap "infixl" (xml_of_pair xml_of_string xml_of_int) args
+  | xml_of_mixfix (Infixr args) = wrap "infixr" (xml_of_pair xml_of_string xml_of_int) args
   | xml_of_mixfix (Binder args) = wrap "binder" (xml_of_triple xml_of_string xml_of_int xml_of_int) args
                                   
 fun mixfix_of_xml e = 
@@ -229,9 +229,9 @@ fun mixfix_of_xml e =
        | "structure" => unwrap_empty Structure 
        | "mixfix" => unwrap Mixfix (triple_of_xml string_of_xml (list_of_xml int_of_xml) int_of_xml)
        | "delimfix" => unwrap Delimfix string_of_xml
-       | "infixname" => unwrap InfixName (pair_of_xml string_of_xml int_of_xml) 
-       | "infixlname" => unwrap InfixlName (pair_of_xml string_of_xml int_of_xml)  
-       | "infixrname" => unwrap InfixrName (pair_of_xml string_of_xml int_of_xml)
+       | "infix" => unwrap Infix (pair_of_xml string_of_xml int_of_xml) 
+       | "infixl" => unwrap Infixl (pair_of_xml string_of_xml int_of_xml)  
+       | "infixr" => unwrap Infixr (pair_of_xml string_of_xml int_of_xml)
        | "binder" => unwrap Binder (triple_of_xml string_of_xml int_of_xml int_of_xml)
        | _ => parse_err "mixfix"
     ) e
